--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -6,7 +6,6 @@ include_directories( ../synth )
 include_directories( . )
 
 add_definitions( -DINSTALL_PREFIX=\"${CMAKE_INSTALL_PREFIX}/lib/mmsynth/\" ) 
-# "
 
 QT4_WRAP_CPP( moc_mainwindow.cpp mainwindow.h )
 QT4_WRAP_CPP( moc_midi.cpp       midi.h       )
@@ -16,16 +15,15 @@ QT4_WRAP_CPP( moc_alsaaudio.cpp  alsaaudio.h  )
 
 QT4_WRAP_UI( ui_mainwindow.h mainwindow.ui )
 
-#add_custom_command(OUTPUT ui_mainwindow.h  
-#				COMMAND uic-qt4 -o ui_mainwindow.h mainwindow.ui
-#				MAIN_DEPENDENCY mainwindow.ui )
-
+QT4_ADD_RESOURCES( mmsynth_RESOURCES ../uis/uis.qrc )
 
 INCLUDE_DIRECTORIES( . )
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
 
+ADD_EXECUTABLE( mmsynth main mainwindow moc_mainwindow midi alsamidi moc_alsamidi 
+											  moc_midi audio moc_audio alsaaudio moc_alsaaudio jackaudio ui_mainwindow.h 
+												${mmsynth_RESOURCES} )
 
-ADD_EXECUTABLE( mmsynth main mainwindow moc_mainwindow midi alsamidi moc_alsamidi moc_midi audio moc_audio alsaaudio moc_alsaaudio jackaudio ui_mainwindow.h )
-
-TARGET_LINK_LIBRARIES( mmsynth asound QtUiTools synth jack mwidgets )
+TARGET_LINK_LIBRARIES( mmsynth asound QtUiTools synth jack mwidgets_static )
 
 install(TARGETS mmsynth DESTINATION bin )
